Prevent wide content from causing page width overflow on mobile
Only apply the display:flex rule to larger screens. Flex isn't necessary
unless we are trying to do a sticky footer.

--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -16,9 +16,11 @@ html, body, #root {
 }
 
 .main {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
+    @media (min-width: #{$bp-small}) {
+        display: flex;
+        flex-direction: column;
+        min-height: 100%;
+    }
 }
 
 .app {
